--- a/reactApp/css/main.css
+++ b/reactApp/css/main.css
@@ -1,1 +1,30 @@
+* {
+ font-family: 'Roboto', sans-serif;
+}
 
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #9abcf4;
+}
+
+.card {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.icon {
+  margin-top: 30px;
+  margin-left: 40px;
+  margin-bottom: 30px;
+}
+
+.userview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #dee8f9;
+}
