--- a/reactApp/css/main.css
+++ b/reactApp/css/main.css
@@ -31,7 +31,8 @@
 
 .buyerview {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .sellerview {
